style.css
/*
Theme Name: A Different Perspective
Theme URI: http://brunoamaral.eu/
Description: Built with awesomeness by DefineGravity.co
Author: DefineGravity
Author URI: http://definegravity.co/
Version: 1.0
Tags: black, white, single-column, fluid-width

License:
License URI:

General comments (optional).
*/



/* Site */
@import url(http://fonts.googleapis.com/css?family=Lato:400,700,400italic);

img { max-width: none }

article .entry-content img {
	max-width: 100%;
}

/**
 body{
	background-image: url('mock.png');
	background-position: 50% 0%;
	background-color:rgba(255,0,0,0.9);
}
/**/



body, 
body h1,
body h2,
body h3,
body h4,
body h5,
body h6 {
	font-family:'Lato', sans-serif;
}

h1,h2,h3{
	margin-bottom: 17px;
}
/* Navigation */

.navbarborder{
	border-top: 1px solid #000;
	border-bottom:1px solid #000;
	border-left: none;
	border-right:none;
	border-radius: 0;
}

nav.navbar a{color:#000;}

.navbar-nav > .active > a,
.navbar-nav > .active > a:hover,
.navbar-nav > .active > a:focus, 
.navbar{
	background-color: transparent;
	margin-bottom:0;
}

header#logo {
	background: url('assets/img/logo.png') no-repeat 47% 55%;
	margin: 0 auto 0 auto;
	display: block;
}

header#logo h1{
	font-size: 16px;
}

header#logo h1 a{
	height: 200px;
	width: 400px;
	margin: 0 auto 0 auto;
	display: block;
	padding-top:165px;
}

/* Body */
body a{
	color:#9c0c0c;
}

article {
	margin-top:55px;
}

article header h1{
	font-size:27px;
}

h1 a, 
h1 a:hover {
	text-decoration: none;
	color:#000;
}
article p{
	-webkit-hyphens: auto;
	-moz-hyphens: auto;
    hyphens: auto;
    text-align: justify;
}
article p, .comments, .comments h2{
	font-size:16px;
}
article img{
	margin-bottom:35px;
}

article footer{
	border-top:1px solid #ccc;
	margin-bottom:30px;
	margin-top:55px;
	display: block;
	padding-top: 5px;
	height: 30px;

}

article footer div.meta-date-cat{
	padding-left: 22px;
}

article footer .article_actions{
	padding-left: 40px;
}

.single-post article footer{
	padding-bottom: 10px;
}

article .action{
	color:#000;
	display: block;
	min-width: 70px;
	float: left;
}

article .action .comments{
}


.blog_navigation{
	border-bottom: 1px solid #ccc;
	padding-bottom: 10px;
}

.previous_article{
	padding-left: 27px;
}

.next_article {
	padding-right: 9px;
}

/* Comments */
.comments h2{
	font-weight: bold;
	font-size: 20px;
}

/* jetpack comments doesn't allow for custom css. For that reason we are keeping the form untouched for now. */
/**
#respond .form-submit input,
#respond .form-submit input#comment-submit, 
#respond .comment-form-fields input[type=submit],
#respond p.form-submit input[type=submit], 
#respond input[type=submit], 
#commentform #submit{
	border:none;
	background: #00A651;
}
/**/ 

/* Footer */
footer#main{
	background-color: #444;
	height: 90px;
	padding-top:30px;
	margin-top: 10px;
}

footer#main a, 
footer#main p {
	color:#a8a8a8;
	font-size: 11px;
	line-height: 21px;
}

footer#main i {
	color:#fff;
}

.sprite {
	display: block;
	float: left;
	width:100px;
}

/* Forms */

form label {
	font-weight: normal;
}

form.search-form{
	display: none;
	position:absolute;
}

input.search-field {
	border: none;
	height: 226px;
}


/* sizes for the search form */


.search-form input[type="search"]{
		width: 100%;
		min-width: 350px;
		font-size: 24px;
	}


@media (min-width: 550px) {
	.search-form input[type="search"]{ 
		width: 670px;
		font-size: 36px;
  }
}

@media (min-width: 720px) {
	.search-form input[type="search"]{ 
		width:720px;
		font-size: 46px;
	}
}

a.trigger_search, 
a.trigger_search:hover {
	text-decoration: none;
	color:#333333;
}


 
/**
input[type="button"], 
input[type="submit"], 
input[type="reset"]{
	border: none;
	border-radius: 3px 3px;
	background-color: #00A651;
	color:#fff;
	font-weight: normal;
	font-size: 12px;	
	padding-left: 20px;
	padding-right: 20px;
	padding-top: 5px;
	padding-bottom: 5px;
}
/**/ 

/* Comments */


ol .commentlist li{
	list-style-type: none;
}

.avatar-holder{
	width: 50px;
	float:left;
	margin-right: 10px;

}
code {
 white-space: pre-wrap;       /* css-3 */
 white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
 white-space: -pre-wrap;      /* Opera 4-6 */
 white-space: -o-pre-wrap;    /* Opera 7 */
 word-wrap: break-word;       /* Internet Explorer 5.5+ */
}

/* Social buttons by jetpack */

div.sharedaddy, 
#main div.sharedaddy,
#content div.sharedaddy,
.sharedaddy .sd-sharing-enabled {
	font-family: 'Lato', sans-serif;
	font-size: inherit;
}

article div.sharedaddy div.sd-block{
	border-top:none;
}

